# DMS

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py
.github/: pull_request_template.md
.github/workflows/: ci.yml
ADRs/: ADR-000.md  ADR-001.md  ADR-002.md  ADR-003.md
Architecture/: dms_diagram.xml
src/: __init__.py  main.py
src/decision_engine/: time_consecutive.py
src/feature_extractor/: __init__.py  ear.py
src/framesource/: __init__.py  webcam.py
src/landmark_extractor/: __init__.py  mediapipe_facemesh.py
tests/: conftest.py
tests/test_decision_engine/: test_time_consecutive.py
tests/test_feature_extractor/: __init__.py  test_ear.py
tests/test_framesource/: __init__.py  test_webcam.py
tests/test_landmark_extractor/: __init__.py  test_mediapipe_facemesh.py
